--- a/webblog/package.json
+++ b/webblog/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
