--- a/webblog/package.json
+++ b/webblog/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
+    "log4js": "^6.7.0",
     "popper.js": "^1.16.1",
     "sass": "^1.56.0"
   }
