--- a/webblog/package.json
+++ b/webblog/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "log4js": "^6.7.0",
+    "mongodb": "^4.11.0",
     "popper.js": "^1.16.1",
     "sass": "^1.56.0"
   }
