--- a/webblog/package.json
+++ b/webblog/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "csrf": "^3.1.0",
     "ejs": "^3.1.8",
@@ -30,6 +31,8 @@
     "jquery": "^3.6.1",
     "log4js": "^6.7.0",
     "mongodb": "^4.11.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.16.1",
     "sass": "^1.56.0"
   }
